kubernetes/retail/base/retail-service.yml
apiVersion: v1
kind: Service
metadata:
  name: retail
  namespace: retail
spec:
  selector:
    app: retail
  type: NodePort
  ports:
    - name: retail
      port: 5016
      targetPort: 5016
