kubernetes/retail/base/retail-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ingress
  namespace: retail
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 37.225.71.95"
spec:
  rules:
  - host: retail.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail
            port:
              number: 5016
  tls:
  - hosts:
    - retail.omni-rs.com
    secretName: omni-rs-com-tls-sub
